fix: blog images layout on mobile responive

--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -261,7 +261,7 @@
     }
 
     img {
-      width: 290px;
+      width: 100%;
       height: 256px;
       max-width: 100%;
     }
